# landscape-generator

./: .gitignore  README.md  demo.py  landscape_project_architecture.md  pyproject.toml
assets/shaders/: simple.frag  simple.vert
assets/shaders/default/: frag.glsl  vert.glsl
old/: camera.py  context.py  demo.py  demo_standalone.py  framebuffer.py  model.py  scene.py  settings.py  shader.py  texture.py
output/: terrain_grid.ply  trees.pts
output/Nissan_Pathfinder/: Nissan_Pathfinder.mtl
output/OldCar/: oldcar.mtl
output/demo_landscape/: landscape.json
output/demo_landscape/data/: biome_map.npy  height_map.npy  tree_positions.npy
output/demo_landscape/meshes/: flat.mtl  grid.mtl
output/test1/: landscape.json
output/test1/data/: biome_map.npy  height_map.npy  tree_positions.npy
output/test1/meshes/: flat.mtl  grid.mtl
output/test2/: landscape.json
output/test2/data/: biome_map.npy  (+2 more)
output/test3/: landscape.json
output/test4/: landscape.json
src/: test.py
src/app/: main.py
src/app_base/: __init__.py  application.py  controllers.py  render_bridge.py  ui.py
src/filepath/: __init__.py  demo.py  paths.py
src/geometry/: __init__.py  delaunay.py  demo.py  grid.py  io.py  mesh.py  utils.py
src/landscape/: __init__.py  biome.py  demo.py  generator.py  landscape.py  selector.py
src/noise/: __init__.py  demo.py  filters.py  fractal.py  io.py  perlin.py  sampling.py  types.py
src/renderer/: __init__.py  buffer.py  camera.py  constants.py  demo.py  material.py  model.py  primitive.py  renderer.py  shader.py  texture.py  utils.py
(+7 files in other folders)
