[build-system]
requires = ["setuptools>=68"]
#build-backend = "setuptools.backends.legacy:build"
build-backend = "setuptools.build_meta"

[project]
name = "landscape-generator"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "Pillow>=10.0",
    "moderngl>=5.10",
    "pyrr>=0.10",
    "dearpygui>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",       # покрытие кода
]

[project.scripts]
landscape-generator = "app.main:main"   # команда запуска после pip install
noise-demo = "noise.demo:demo"   
geometry-demo = "geometry.demo:demo"
renderer-demo = "renderer.demo:demo"
app_base-demo = "app_base.demo:demo"
landscape-demo = "landscape.demo:demo"

[tool.setuptools.packages.find]
where = ["src"]   # вместо ["."]
include = ["noise*", "geometry*", "app_base*", "renderer*", "landscape*", "app*", "filepath*"]

[tool.pytest.ini_options]
testpaths = [
    "src/noise/tests",
    "src/geometry/tests",
    "src/app_base/tests",
    "src/renderer/tests",
    "src/landscape/tests",
]
addopts = "-v --tb=short"

[tool.ruff]        # опционально: линтер (быстрее flake8)
line-length = 100